add photo options

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-bot.token = kek
-bot.username = kek
+bot.token = 720900952:AAHGWgJd4AedPMeS8ZKCInoVT2_8Cv5QCuM
+bot.name = JOIN TO PARTY
 proxy.host = 127.0.0.1
 proxy.port = 9150
